--- a/index.html
+++ b/index.html
@@ -8,25 +8,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <ul id="list" class="comments">
-
-    </ul>
-    <div id="loading-comment">
-      <p>Подождие, комментарии загружаются...</p>
-    </div>
-    <div id="comment-hover">
-      <p>Комментарий добавляется...</p>
-    </div>
-    <div class="add-form" id="add-form-disable">
-      <input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" value="" />
-      <textarea id="comment-text" type="textarea" class="add-form-text" placeholder="Введите ваш коментарий" rows="4"
-        value=""></textarea>
-      <div class="add-form-row">
-        <button id="add-button" class="add-form-button" data-index="${index}"> Написать</button>
-      </div>
-    </div>
-  </div>
+ 
+  <div id="app"></div>
 </body>
 
 <script type="module" src="./main.js"></script>
