--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     
     <div class="add-form" id="add-form-disable">
-      <input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" value="" />
+
+      <input id="name-input" type="text" class="add-form-name" placeholder="Введите ваше имя" value="" readonly/>
+
       <textarea id="comment-text" type="textarea" class="add-form-text" placeholder="Введите ваш коментарий" rows="4"
         value=""></textarea>
       <div class="add-form-row">
