--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <div id="app"></div>
   </div>
 </body>
-<script type="module" src="./main.js"></script>
+<script src="./dist/main.js"></script>
 
 </html>
